--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ djangopuntos/__pycache__/settings.cpython-39.pyc
 myapp/__pycache__/models.cpython-39.pyc
 myapp/migrations/__pycache__/__init__.cpython-39.pyc
 myapp/__pycache__/views.cpython-39.pyc
+djangopuntos/__pycache__/__init__.cpython-39.pyc
+djangopuntos/__pycache__/settings.cpython-39.pyc
